k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: rackapp-service
  labels:
    app.kubernetes.io/name: rackapp

spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: rackapp
  ports:
    - port: 19292
      targetPort: 9292
