k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: rackapp-ingress
  labels:
    app: rackapp

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: rackapp-service
              servicePort: 19292
